--- a/Dockerfile.e2e
+++ b/Dockerfile.e2e
@@ -1,16 +1,10 @@
-# this must be executed in the context of the monorepo's root
-FROM --platform=linux/amd64 synthetixio/docker-e2e:20.0-debian as base
-
-RUN groupadd -r testers
-RUN useradd -r -g testers -m -d /app tester
-USER tester
+FROM synthetixio/docker-e2e:16.17-ubuntu as base
 
 WORKDIR /app
 
 COPY package.json ./
 COPY yarn.lock ./
 
-RUN yarn install --frozen-lockfile --prefer-offline
+FROM base as test
+RUN yarn --frozen-lockfile --prefer-offline --no-audit
 COPY . .
-
-ENTRYPOINT ["yarn", "wait-on", "http://display:8080", "&&", "yarn", "test:e2e"]
