--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -220,7 +220,7 @@ jobs:
           CYPRESS_RESOURCES_WAIT: true
   cleanup:
     name: 🧹 Cleanup
-    needs: [install, lint, test, typecheck, build]
+    needs: [install, lint, test, build]
     runs-on: ubuntu-20.04
     steps:
       - name: Delete workspace artifact
