--- a/Dockerfile.e2e
+++ b/Dockerfile.e2e
@@ -1,4 +1,3 @@
-FROM synthetixio/docker-e2e:20.0-ubuntu as base
 
 WORKDIR /app
 
@@ -7,3 +6,26 @@ COPY yarn.lock ./
 RUN yarn --frozen-lockfile --prefer-offline --no-audit
 
 COPY . .
+
+FROM synthetixio/docker-e2e:20.0-ubuntu AS base
+ 
+FROM base AS builder
+RUN apk add --no-cache libc6-compat
+RUN apk update
+WORKDIR /app
+RUN yarn global add turbo
+COPY . .
+RUN turbo prune @carrot-kpi/host-frontend --docker
+ 
+FROM base AS tester
+RUN apk add --no-cache libc6-compat
+RUN apk update
+WORKDIR /app
+COPY .gitignore .gitignore
+COPY --from=builder /app/out/json/ .
+COPY --from=builder /app/out/yarn.lock ./yarn.lock
+RUN yarn install
+COPY --from=builder /app/out/full/ .
+RUN addgroup --system --gid 1001 carrot
+RUN adduser --system --uid 1001 tester
+USER tester
