--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -201,8 +201,8 @@ jobs:
       #   with:
       #     distribution: "temurin"
       #     java-version: "17"
-      - name: Install dependencies
-        run: yarn install --prefer-offline
+      # - name: Install dependencies
+      #   run: yarn install --prefer-offline
       - name: Run synpress tests
         run: |
           docker compose -f docker-compose.e2e.yaml up --build --exit-code-from synpress
