--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,13 +9,6 @@
 # concurrency:
 #   group: ci-${{ github.ref }}
 #   cancel-in-progress: true
-# env:
-#   TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
-#   TURBO_TEAM: ${{ vars.TURBO_TEAM }}
-#   INFURA_PROJECT_ID: ${{ secrets.INFURA_PROJECT_ID }}
-#   WALLETCONNECT_PROJECT_ID: ${{ secrets.WALLETCONNECT_PROJECT_ID }}
-#   FATHOM_SITE_ID: ${{ secrets.FATHOM_SITE_ID }}
-#   FATHOM_API_KEY: ${{ secrets.FATHOM_API_KEY }}
 # jobs:
 #   ci:
 #     runs-on: ubuntu-latest
@@ -105,6 +98,13 @@ on:
 concurrency:
   group: ci-${{ github.ref }}
   cancel-in-progress: true
+env:
+  TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
+  TURBO_TEAM: ${{ vars.TURBO_TEAM }}
+  INFURA_PROJECT_ID: ${{ secrets.INFURA_PROJECT_ID }}
+  WALLETCONNECT_PROJECT_ID: ${{ secrets.WALLETCONNECT_PROJECT_ID }}
+  FATHOM_SITE_ID: ${{ secrets.FATHOM_SITE_ID }}
+  FATHOM_API_KEY: ${{ secrets.FATHOM_API_KEY }}
 jobs:
   install:
     name: Install
@@ -148,7 +148,7 @@ jobs:
           check-latest: true
           cache: "yarn"
       - name: Run linter
-        run: yarn lint --quiet
+        run: yarn lint
   test:
     name: Test
     needs: install
