--- a/Dockerfile.e2e
+++ b/Dockerfile.e2e
@@ -11,7 +11,7 @@ WORKDIR /app
 COPY .gitignore .gitignore
 COPY --from=builder /app/out/json/ .
 COPY --from=builder /app/out/yarn.lock ./yarn.lock
-RUN yarn install
+RUN yarn install --immutable --prefer-offline
 COPY --from=builder /app/out/full/ .
 RUN addgroup --system --gid 1001 carrot
 RUN adduser --system --uid 1001 tester
