--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -197,15 +197,14 @@ jobs:
           chrome-version: stable
       - name: Checkout repo
         uses: actions/checkout@v3
-      # - uses: actions/setup-java@v3
-      #   with:
-      #     distribution: "temurin"
-      #     java-version: "17"
-      # - name: Install dependencies
-      #   run: yarn install --prefer-offline
       - name: Run synpress tests
         run: |
-          docker compose -f docker-compose.e2e.yaml up --build --exit-code-from synpress
+          docker compose -f docker-compose.e2e.yaml \
+            up --build --exit-code-from synpress \
+            -e INFURA_PROJECT_ID \
+            -e WALLETCONNECT_PROJECT_ID \
+            -e FATHOM_SITE_ID \
+            -e FATHOM_API_KEY
         continue-on-error: true
         env:
           CI: true
