--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -200,7 +200,7 @@ jobs:
       - name: Run synpress tests
         run: |
           docker compose -f docker-compose.e2e.yaml \
-            up --build --exit-code-from synpress \
+            run --build synpress \
             -e INFURA_PROJECT_ID \
             -e WALLETCONNECT_PROJECT_ID \
             -e FATHOM_SITE_ID \
