--- a/Dockerfile.e2e
+++ b/Dockerfile.e2e
@@ -9,6 +9,8 @@ RUN turbo prune @carrot-kpi/host-frontend --docker
 FROM base AS tester
 WORKDIR /app
 COPY .gitignore .gitignore
+COPY .prettierrc .prettierrc
+COPY turbo.json turbo.json
 COPY --from=builder /app/out/json/ .
 COPY --from=builder /app/out/yarn.lock ./yarn.lock
 RUN yarn install --immutable --prefer-offline
