--- a/Dockerfile.e2e
+++ b/Dockerfile.e2e
@@ -1,16 +1,17 @@
 FROM synthetixio/docker-e2e:20.0-ubuntu AS base
- 
+
 FROM base AS builder
 WORKDIR /app
 RUN yarn global add turbo
 COPY . .
 RUN turbo prune @carrot-kpi/host-frontend --docker
- 
+
 FROM base AS tester
 WORKDIR /app
 COPY .gitignore .gitignore
 COPY .prettierrc .prettierrc
 COPY turbo.json turbo.json
+COPY .env.synpress .env.synpress
 COPY --from=builder /app/out/json/ .
 COPY --from=builder /app/out/yarn.lock ./yarn.lock
 RUN yarn install --immutable --prefer-offline
