--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,87 +1,3 @@
-# name: CI
-# on:
-#   push:
-#     branches:
-#       - main
-#       - develop
-#   pull_request:
-#     types: [opened, synchronize, reopened]
-# concurrency:
-#   group: ci-${{ github.ref }}
-#   cancel-in-progress: true
-# jobs:
-#   ci:
-#     runs-on: ubuntu-latest
-#     strategy:
-#       matrix:
-#         node-version: [18.x]
-#     steps:
-#       - name: Checkout
-#         uses: actions/checkout@v3
-#       - name: Setup Node.js ${{ matrix.node-version }}
-#         uses: actions/setup-node@v3
-#         with:
-#           node-version: ${{ matrix.node-version }}
-#       - name: Yarn cache setup
-#         id: yarn-cache-setup
-#         run: |
-#           echo "yarn-cache-dir=$(yarn cache dir)" >> $GITHUB_OUTPUT
-#           echo "yarn-cache-key=${{ runner.os }}-yarn-${{ matrix.node-version }}-${{ hashFiles('yarn.lock') }}" >> $GITHUB_OUTPUT
-#       - name: Yarn cache restore
-#         uses: actions/cache/restore@v3
-#         with:
-#           path: ${{ steps.yarn-cache-setup.outputs.yarn-cache-dir }}
-#           key: ${{ steps.yarn-cache-setup.outputs.yarn-cache-key }}
-#       - name: Install dependencies
-#         run: yarn install --prefer-offline --frozen-lockfile
-#       - name: Yarn cache save
-#         uses: actions/cache/save@v3
-#         with:
-#           path: ${{ steps.yarn-cache-setup.outputs.yarn-cache-dir }}
-#           key: ${{ steps.yarn-cache-setup.outputs.yarn-cache-key }}
-#       - name: Lint
-#         run: yarn lint
-#       - name: Test
-#         run: yarn test
-#       - name: Build
-#         run: yarn build
-#       - name: Size check
-#         run: yarn size-limit
-#   e2e:
-#     runs-on: ubuntu-latest
-#     strategy:
-#       fail-fast: false
-#       matrix:
-#         browser: [chrome, edge, electron, firefox]
-#     steps:
-#       - uses: actions/checkout@v4
-#       - name: Set up QEMU
-#         uses: docker/setup-qemu-action@v3
-#       - name: Set up Docker Buildx
-#         uses: docker/setup-buildx-action@v3
-#       - name: Docker cache setup
-#         id: docker-cache-setup
-#         run: |
-#           echo "docker-cache-dir=/tmp/.buildx-cache" >> $GITHUB_OUTPUT
-#           echo "docker-cache-key=${{ runner.os }}-buildx-${{ github.sha }}" >> $GITHUB_OUTPUT
-#       - name: Restore cached Docker layers
-#         uses: actions/cache/restore@v3
-#         with:
-#           path: ${{ steps.docker-cache-setup.outputs.docker-cache-dir }}
-#           key: ${{ steps.docker-cache-setup.outputs.docker-cache-key }}
-#       - name: Run e2e tests
-#         run:
-#           docker compose -f docker-compose.e2e.yaml run synpress \
-#               -e INFURA_PROJECT_ID \
-#               -e WALLETCONNECT_PROJECT_ID \
-#               -e FATHOM_SITE_ID \
-#               -e FATHOM_API_KEY
-#       - name: Cache Docker layers
-#         uses: actions/cache/save@v3
-#         with:
-#           path: ${{ steps.docker-cache-setup.outputs.docker-cache-dir }}
-#           key: ${{ steps.docker-cache-setup.outputs.docker-cache-key }}
-
 name: CI
 on:
   push:
@@ -105,6 +21,7 @@ env:
   WALLETCONNECT_PROJECT_ID: ${{ secrets.WALLETCONNECT_PROJECT_ID }}
   FATHOM_SITE_ID: ${{ secrets.FATHOM_SITE_ID }}
   FATHOM_API_KEY: ${{ secrets.FATHOM_API_KEY }}
+  HUSKY: "0"
 jobs:
   install:
     name: Install
@@ -119,23 +36,26 @@ jobs:
           check-latest: true
           cache: "yarn"
       - name: Install dependencies
-        run: yarn install --prefer-offline
-        env:
-          HUSKY: "0"
+        run: yarn install --immutable --prefer-offline
+      - name: Compress workspace artifact
+        run: tar --create --use-compress-program='zstd -T0' --file=/tmp/workspace.tar.zst .
       - name: Upload workspace artifact
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v3
         with:
           name: workspace
-          path: .
+          path: /tmp/workspace.tar.zst
+          retention-days: 1
   lint:
     name: Lint
     needs: install
     runs-on: ubuntu-20.04
     steps:
       - name: Download workspace artifact
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@v3
         with:
           name: workspace
+      - name: Extract workspace artifact
+        run: tar --extract --use-compress-program='zstd -d' --file=workspace.tar.zst
       - name: Setup node
         uses: actions/setup-node@v3
         with:
@@ -150,9 +70,11 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - name: Download workspace artifact
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@v3
         with:
           name: workspace
+      - name: Extract workspace artifact
+        run: tar --extract --use-compress-program='zstd -d' --file=workspace.tar.zst
       - name: Setup node
         uses: actions/setup-node@v3
         with:
@@ -167,9 +89,11 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - name: Download workspace artifact
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@v3
         with:
           name: workspace
+      - name: Extract workspace artifact
+        run: tar --extract --use-compress-program='zstd -d' --file=workspace.tar.zst
       - name: Setup node
         uses: actions/setup-node@v3
         with:
@@ -192,10 +116,6 @@ jobs:
           SLOW_MODE: true
           DISPLAY: ":99"
           CYPRESS_RESOURCES_WAIT: true
-          INFURA_PROJECT_ID: ${{ secrets.INFURA_PROJECT_ID }}
-          WALLETCONNECT_PROJECT_ID: ${{ secrets.WALLETCONNECT_PROJECT_ID }}
-          FATHOM_SITE_ID: ${{ secrets.FATHOM_SITE_ID }}
-          FATHOM_API_KEY: ${{ secrets.FATHOM_API_KEY }}
   cleanup:
     name: Cleanup
     needs: [install, lint, test, build]
