--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -108,19 +108,24 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      - name: Run synpress tests
-        run: |
-          docker-compose -f docker-compose.e2e.yaml up --build --exit-code-from synpress
+      - name: Setup cache
+        uses: actions/cache@v3
+        with:
+          path: /home/runner/.cache/Cypress
+          key: ${{ runner.os }}-cypress-${{ hashFiles('yarn.lock') }}
+          restore-keys: ${{ runner.os }}-cypress
         continue-on-error: true
+      - name: Install Linux deps
+        run: sudo apt-get install --no-install-recommends -y fluxbox xvfb
+      - name: Run e2e tests
+        run: |
+          Xvfb :0 -screen 0 1024x768x24 -listen tcp -ac &
+          fluxbox &
+          yarn test:e2e
         env:
-          CI: true
-          SLOW_MODE: true
-          DISPLAY: ":99"
-          CYPRESS_RESOURCES_WAIT: true
+          GH_PAT: ${{ secrets.GH_PAT }}
+          GH_USERNAME: ${{ secrets.GH_USERNAME }}
+          DISPLAY: :0.0
   cleanup:
     name: Cleanup
     needs: [install, lint, test, build]
