--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -93,11 +93,11 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: latest
-      - name: Build app
-        run: yarn build
+      - name: Check size limit
+        run: yarn size:limit
   e2e-test:
     name: Test e2e
-    needs: [install]
+    needs: install
     runs-on: ubuntu-22.04
     steps:
       - name: Download workspace artifact
@@ -126,7 +126,7 @@ jobs:
           DISPLAY: :0.0
   cleanup:
     name: Cleanup
-    needs: [install, lint, test, build]
+    needs: [install, lint, unit-test, size-limit]
     runs-on: ubuntu-20.04
     steps:
       - name: Delete workspace artifact
