--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -100,14 +100,15 @@ jobs:
         run: yarn install --immutable --prefer-offline
       - name: Install Linux deps
         run: sudo apt-get install --no-install-recommends -y fluxbox xvfb
-      - name: Run e2e tests
+      - name: Run xvfb and fluxbox
         run: |
           Xvfb :0 -screen 0 1024x768x24 -listen tcp -ac &
           fluxbox &
-          yarn test:e2e
         env:
-          GH_PAT: ${{ secrets.GH_PAT }}
-          GH_USERNAME: ${{ secrets.GH_USERNAME }}
+          DISPLAY: :0.0
+      - name: Run e2e tests
+        run: yarn test:e2e
+        env:
           DISPLAY: :0.0
   cleanup:
     name: Cleanup
