--- a/turbo.json
+++ b/turbo.json
@@ -37,7 +37,7 @@
             "dependsOn": ["^build"]
         },
         "size-limit": {
-            "dependsOn": ["^build"]
+            "dependsOn": ["^build", "build"]
         },
         "lint": {},
         "format": {}
