--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -100,7 +100,7 @@ jobs:
         run: yarn install --immutable --prefer-offline
       - name: Install Linux deps
         run: sudo apt-get install --no-install-recommends -y fluxbox xvfb
-      - name: Run xvfb and fluxbox
+      - name: Run e2e tests
         run: |
           Xvfb :0 -screen 0 1024x768x24 -listen tcp -ac & fluxbox & yarn test:e2e
         env:
