--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -101,7 +101,8 @@ jobs:
       - name: Install Linux deps
         run: sudo apt-get install --no-install-recommends -y fluxbox xvfb
       - name: Run e2e tests
-        run: |
-          Xvfb :0 -screen 0 1024x768x24 -listen tcp -ac & fluxbox & yarn test:e2e
-        env:
-          DISPLAY: :0.0
+        # run: |
+        #   Xvfb :0 -screen 0 1024x768x24 -listen tcp -ac & fluxbox & yarn test:e2e
+        run: yarn test:e2e
+        # env:
+        #   DISPLAY: :0.0
