--- a/packages/frontend/.env.synpress
+++ b/packages/frontend/.env.synpress
@@ -1,6 +1,7 @@
+DISPLAY=display:0.0
 SECRET_WORDS='battle raccoon helmet please deliver keep kiss round orphan frame update message'
-NETWORK_NAME='Mumbai'
-CHAIN_ID=80001
-RPC_URL='https://rpc.ankr.com/polygon_mumbai'
-SYMBOL="MATIC"
-IS_TESTNET=true
+# NETWORK_NAME='Mumbai'
+# CHAIN_ID=80001
+ANVIL_FORK_URL='https://rpc.ankr.com/polygon_mumbai'
+# SYMBOL="MATIC"
+# IS_TESTNET=true
