--- a/docker-compose.e2e.yaml
+++ b/docker-compose.e2e.yaml
@@ -10,9 +10,7 @@ services:
         - WALLETCONNECT_PROJECT_ID=${WALLETCONNECT_PROJECT_ID}
         - FATHOM_SITE_ID=${FATHOM_SITE_ID}
         - FATHOM_API_KEY=${FATHOM_API_KEY}
-    env_file: .env.synpress
-    environment:
-      - DISPLAY=display:0.0
+    env_file: packages/frontend/.env.synpress
     depends_on:
       - display
       - video
@@ -21,7 +19,19 @@ services:
     volumes:
       - ./docker/videos:/app/public-report/screenshots
       - ./docker/screenshots:/app/public-report/videos
-    command: yarn test:e2e
+    command: >
+      bash -c yarn wait-on http://display:8080 && yarn test:e2e'
+    networks:
+      - x11
+  
+  foundry:
+    container_name: foundry
+    image: synthetixio/foundry:457bb48776c3b14de232d9dda620ba9188dc40ac-base
+    command: [ 'anvil --no-cors --fork-url ${ANVIL_FORK_URL}' ]
+    environment:
+      - ANVIL_IP_ADDR=0.0.0.0
+    ports:
+      - '8545:8545'
     networks:
       - x11
 
@@ -30,21 +40,10 @@ services:
     image: synthetixio/display:b2643097e891906524e52e7ee956260b20fa01fb-base
     environment:
       - RUN_XTERM=no
+      - DISPLAY_WIDTH=1920
+      - DISPLAY_HEIGHT=1080
     ports:
       - "8080:8080"
-    networks:
-      - x11
-
-  ngrok:
-    profiles:
-      - ngrok
-    container_name: ngrok
-    image: synthetixio/ngrok:b2643097e891906524e52e7ee956260b20fa01fb-base
-    ports:
-      - "4040:4040"
-    command: ["ngrok", "http", "display:8080", "--authtoken", "${NGROK_AUTH}"]
-    depends_on:
-      - display
     networks:
       - x11
 
