--- a/Dockerfile.e2e
+++ b/Dockerfile.e2e
@@ -11,7 +11,7 @@ WORKDIR /app
 COPY .gitignore .gitignore
 COPY .prettierrc .prettierrc
 COPY turbo.json turbo.json
-COPY .env.synpress .env.synpress
+COPY packages/frontend/.env.synpress packages/frontend/.env.synpress
 COPY --from=builder /app/out/json/ .
 COPY --from=builder /app/out/yarn.lock ./yarn.lock
 RUN yarn install --immutable --prefer-offline
