--- a/docker-compose.e2e.yaml
+++ b/docker-compose.e2e.yaml
@@ -27,8 +27,7 @@ services:
   foundry:
     container_name: foundry
     image: synthetixio/foundry:457bb48776c3b14de232d9dda620ba9188dc40ac-base
-    env_file: packages/frontend/.env.synpress
-    command: [ 'anvil --no-cors --fork-url ${ANVIL_FORK_URL}' ]
+    command: [ 'anvil --no-cors --fork-url https://rpc.ankr.com/polygon_mumbai' ]
     environment:
       - ANVIL_IP_ADDR=0.0.0.0
     ports:
