--- a/packages/frontend/.env.synpress
+++ b/packages/frontend/.env.synpress
@@ -1,5 +1,6 @@
 DISPLAY=display:0.0
-SECRET_WORDS='battle raccoon helmet please deliver keep kiss round orphan frame update message'
+SECRET_WORDS='test test test test test test test test test test test junk'
+RPC_URL="http://localhost:8545"
 NETWORK_NAME='Mumbai'
 CHAIN_ID=80001
 SYMBOL="MATIC"
