--- a/packages/frontend/.env.synpress
+++ b/packages/frontend/.env.synpress
@@ -1,9 +1,6 @@
-DISPLAY=display:0.0
 SECRET_WORDS='test test test test test test test test test test test junk'
-RPC_URL="http://localhost:8545"
+RPC_URL="https://rpc.ankr.com/polygon_mumbai"
 NETWORK_NAME='Mumbai'
 CHAIN_ID=80001
 SYMBOL="MATIC"
 IS_TESTNET=true
-SKIP_METAMASK_INSTALL=true
-SKIP_METAMASK_SETUP=true
