--- a/docker-compose.e2e.yaml
+++ b/docker-compose.e2e.yaml
@@ -20,8 +20,11 @@ services:
       - ./docker/screenshots:/app/public-report/videos
     environment:
       - DISPLAY=display:0.0
+      - SKIP_METAMASK_INSTALL=true
+      - SKIP_METAMASK_SETUP=true
+      - SYNDEBUG=true
     command: >
-      bash -c 'yarn wait-on http://display:8080 && yarn test:e2e:ci'
+      bash -c 'yarn wait-on http://display:8080 && yarn test:e2e:run'
     networks:
       - x11
 
