--- a/packages/frontend/tsconfig.json
+++ b/packages/frontend/tsconfig.json
@@ -2,6 +2,7 @@
     "extends": "../tsconfig/frontend.json",
     "include": ["./src/**/*", "./cypress/**/*"],
     "compilerOptions": {
+        "baseUrl": "./",
         "lib": ["dom", "esnext", "webworker"],
         "types": ["cypress", "node"],
         "outDir": "./dist"
