chore: ci command

--- a/docker-compose.e2e.yaml
+++ b/docker-compose.e2e.yaml
@@ -16,8 +16,9 @@ services:
     environment:
       - DISPLAY=display:0.0
       - SYNDEBUG=true
+      - CYPRESS_DOCKER_RUN=true
     command: >
-      bash -c 'yarn wait-on http://display:8080 && yarn test:e2e'
+      bash -c 'yarn wait-on http://display:8080 && yarn test:e2e:ci'
     networks:
       - x11
 
