--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -36,7 +36,9 @@
         "start:staging": "yarn prepare-fathom && STAGING=true craco start",
         "start": "craco start",
         "synpress:run": "env-cmd -f .env.e2e synpress run --browser chrome --configFile synpress.config.js",
-        "test:e2e": "start-server-and-test 'yarn start:staging' http-get://127.0.0.1:3000 'yarn synpress:run'"
+        "test:e2e": "start-server-and-test 'yarn start:staging' http-get://127.0.0.1:3000 'yarn synpress:run'",
+        "synpress:run:ci": "env-cmd -f .env.e2e SKIP_METAMASK_SETUP=true synpress run --browser chrome --configFile synpress.config.js",
+        "test:e2e:ci": "start-server-and-test 'yarn start:staging' http-get://127.0.0.1:3000 'yarn synpress:run:ci'"
     },
     "dependencies": {
         "@carrot-kpi/react": "*",
