--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -37,7 +37,7 @@
         "start": "craco start",
         "synpress:run": "env-cmd -f .env.e2e synpress run --browser chrome --configFile synpress.config.js",
         "test:e2e": "start-server-and-test 'yarn start:staging' http-get://127.0.0.1:3000 'yarn synpress:run'",
-        "synpress:run:ci": "env-cmd -f .env.e2e SKIP_METAMASK_SETUP=true synpress run --browser chrome --configFile synpress.config.js",
+        "synpress:run:ci": "env-cmd -f .env.e2e synpress run --browser chrome --configFile synpress.config.js",
         "test:e2e:ci": "start-server-and-test 'yarn start:staging' http-get://127.0.0.1:3000 'yarn synpress:run:ci'"
     },
     "dependencies": {
